@startuml

component "Data Analysis" {
    class BackgroundRemoval {
        +async remove_background(image_file)
    }
    class ColorExtraction {
        +detect_colors(image_file)
        +closest_color(rgb_tuple)
    }
    class CategoryDetection {
        +detect_category(file)
    }

    class API {
        +background_and_color()
        +predict()
    }

    BackgroundRemoval --> API: uses
    ColorExtraction --> API: uses
    CategoryDetection --> API: uses
}

@enduml
